main content area alignment fixed; sidebar aligned correctly

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ See http://codex.wordpress.org/Right_to_Left_Language_Support
  */
 
 body {
-	direction: rtl;
+	direction: none;
 	unicode-bidi: embed;
 }
 
@@ -67,12 +67,14 @@ menu,
 ol,
 ul {
 	padding: 0 40px 0 0;
+	margin-left: 20px
+}
 }
 
 caption,
 th,
 td {
-	text-align: right;
+	text-align: left;
 }
 
 td {
@@ -113,15 +115,15 @@ td {
 /* Navbar */
 ul.nav-menu,
 div.nav-menu > ul {
-	margin: 0 -20px 0 0;
-	padding: 0 0 0 40px;
+	margin: 0 -10px 0 0;
+	padding: 0 0 0 0px;
 }
 
 .nav-menu .sub-menu,
 .nav-menu .children {
-	float: right;
-	left: auto;
-	right: -2px;
+	float: left;
+	left: -2px; /*makes menu hover to hte right*/
+	right: auto;
 }
 
 .nav-menu .sub-menu ul,
@@ -133,8 +135,8 @@ div.nav-menu > ul {
 }
 
 .main-navigation .search-form {
-	left: 0;
-	right: auto;
+	left: aut;
+	right: 0;
 }
 
 .site-header .search-field {
@@ -154,6 +156,11 @@ div.nav-menu > ul {
 	padding-right: 20px;
 }
 
+#nav_menu-2 {
+	background-color: none;
+}
+
+
 
 /**
  * 5.0 Content
@@ -166,6 +173,26 @@ div.nav-menu > ul {
 .sidebar .entry-meta {
 	padding-left: 376px;
 	padding-right: 60px;
+}
+
+.widget {
+	background-color: white;
+	font-size: 14px;
+	-webkit-hyphens: auto;
+	-moz-hyphens:    auto;
+	-ms-hyphens:     auto;
+	hyphens:         auto;
+	margin: 0 0 24px;
+	padding: 0px;
+	word-wrap: break-word;
+}
+
+.entry-content img.alignleft, .entry-content .wp-caption.alignleft {
+    margin-left:inherit;
+}
+
+.entry-content img.alignright, .entry-content .wp-caption.alignright {
+    margin-right: inherit;
 }
 
 
@@ -524,7 +551,8 @@ div.nav-menu > ul {
 
 .site-main .widget-area {
 	float: left;
-}
+	width: 250px;
+	}
 
 .widget-area a {
 	max-width: 100%;
@@ -542,8 +570,12 @@ div.nav-menu > ul {
 
 .widget li > ul,
 .widget li > ol {
-	margin-left: auto;
+	margin-left: 0px;
 	margin-right: 20px;
+}
+
+.widget li {
+	padding-top:none;
 }
 
 /**
@@ -775,3 +807,4 @@ div.nav-menu > ul {
 		margin-right: auto;
 	}
 }
+
